<?xml version="1.0" encoding="UTF-8"?>
<!-- JBoss, Home of Professional Open Source Copyright 2008, Red Hat Middleware 
	LLC, and others contributors as indicated by the @authors tag. All rights 
	reserved. See the copyright.txt in the distribution for a full listing of 
	individual contributors. This copyrighted material is made available to anyone 
	wishing to use, modify, copy, or redistribute it subject to the terms and 
	conditions of the GNU Lesser General Public License, v. 2.1. This program 
	is distributed in the hope that it will be useful, but WITHOUT A WARRANTY; 
	without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR 
	PURPOSE. See the GNU Lesser General Public License for more details. You 
	should have received a copy of the GNU Lesser General Public License, v.2.1 
	along with this distribution; if not, write to the Free Software Foundation, 
	Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA. -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <parent>
        <groupId>org.jboss.narayana.blacktie</groupId>
        <artifactId>blacktie-all</artifactId>
        <version>5.9.1.Final-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>blacktie-jatmibroker-xatmi</artifactId>
    <name>Blacktie Java XATMI Implementation</name>
    <packaging>jar</packaging>
    <description>A BlackTie component</description>
    <developers>
        <developer>
            <id>tomjenkinson</id>
            <name>Thomas Jenkinson</name>
            <email>tom.jenkinson@redhat.com</email>
            <organization>JBoss</organization>
            <organizationUrl>http://www.jboss.org/</organizationUrl>
            <roles>
                <role>Project Lead</role>
            </roles>
            <timezone>0</timezone>
        </developer>
        <developer>
            <id>mmusgrov</id>
            <name>Michael Musgrove</name>
            <email>mmusgrov@redhat.com</email>
            <organization>JBoss</organization>
            <organizationUrl>http://www.jboss.org/</organizationUrl>
            <roles>
                <role>Core Developer</role>
            </roles>
            <timezone>0</timezone>
        </developer>
        <developer>
            <id>zfeng</id>
            <name>Amos Feng</name>
            <email>zfeng@redhat.com</email>
            <organization>JBoss</organization>
            <organizationUrl>http://www.jboss.org/</organizationUrl>
            <roles>
                <role>Core Developer</role>
            </roles>
            <timezone>0</timezone>
        </developer>
    </developers>
    <licenses>
        <license>
            <name>LGPL 2.1</name>
            <url>http://www.gnu.org/licenses/lgpl-2.1.html</url>
        </license>
    </licenses>
    <reporting>
        <plugins>
            <plugin>
                <!-- http://mojo.codehaus.org/emma-maven-plugin/ -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>emma-maven-plugin</artifactId>
                <version>1.0-alpha-2</version>
                <inherited>true</inherited>
                <configuration>
                    <metadataFile>${project.build.directory}/test-classes/coverage.em</metadataFile>
                    <metrics>method:70,block:70,line:80,class:100</metrics>
                    <dataFiles>
                        <dataFile>${project.build.directory}/test-classes/coverage.em</dataFile>
                        <dataFile>${project.build.directory}/test-classes/coverage.ec</dataFile>
                    </dataFiles>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <build>
        <plugins>
            <plugin>
              <inherited>false</inherited>
              <groupId>org.sonatype.plugins</groupId>
              <artifactId>nexus-staging-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <forkMode>once</forkMode>
                    <workingDirectory>target/test-classes</workingDirectory>
                    <environmentVariables>
                        <JBOSSAS_IP_ADDR>${jbossas.ip.addr}</JBOSSAS_IP_ADDR>
                    </environmentVariables>
                    <inherited>true</inherited>
                </configuration>
            </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<Dependencies>org.jboss.jts,org.jboss.narayana.rts</Dependencies>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
        </plugins>
    </build>
    <dependencies>
        <!-- REQUIRED FOR AIX TO GET JAXP-RI -->
        <!--
		<dependency>
		    <groupId>org.apache.servicemix.bundles</groupId>
		    <artifactId>org.apache.servicemix.bundles.jaxp-ri</artifactId>
		    <version>1.4.2_1</version>
		</dependency>
		-->
        <!-- END OF AIX REQUIREMENT -->
        <dependency>
            <groupId>org.jboss.spec.javax.transaction</groupId>
            <artifactId>jboss-transaction-api_1.1_spec</artifactId>
            <scope>provided</scope>
        </dependency>
		<dependency>
			<groupId>org.jboss.spec.javax.ejb</groupId>
			<artifactId>jboss-ejb-api_3.2_spec</artifactId>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.spec.javax.jms</groupId>
            <artifactId>jboss-jms-api_1.1_spec</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.jboss.narayana.blacktie</groupId>
            <artifactId>blacktie-xsd</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jboss.narayana.rts</groupId>
            <artifactId>restat-bridge</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.15</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.jmx</groupId>
                    <artifactId>jmxri</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jdmk</groupId>
                    <artifactId>jmxtools</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.jms</groupId>
                    <artifactId>jms</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.mail</groupId>
                    <artifactId>mail</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <!-- START TEST -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
        <!-- END TEST -->
        <dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.8.1</version>
        </dependency>
        <dependency>
            <groupId>javax.xml</groupId>
            <artifactId>jaxb-xjc</artifactId>
            <version>2.0EA3</version>
        </dependency>
    </dependencies>
    <properties>
        <test.output.type>shared</test.output.type>
        <java.corba.patch.name>idlj.java.corba.patch</java.corba.patch.name>
        <java.corba.patch.jar>${project.build.directory}/dependency/${java.corba.patch}-${project.version}.jar</java.corba.patch.jar>
    </properties>
    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <detectOfflineLinks>false</detectOfflineLinks>
                            <excludePackageNames>org.jboss.narayana.blacktie.jatmibroker.core</excludePackageNames>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>j9</id>
            <activation>
                <jdk>[1.9,)</jdk>
            </activation>
            <dependencies>
               <dependency>
                    <groupId>org.jboss.narayana.jts</groupId>
                    <artifactId>narayana-jts-idlj-j9</artifactId>
                    <scope>provided</scope>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>2.10</version>
                        <executions>
                            <execution>
                                <id>copy-dependencies</id>
                                <phase>initialize</phase>
                                <goals>
                                    <goal>copy</goal>
                                </goals>
                                <configuration>
                                    <artifactItems>
                                        <artifactItem>
                                            <groupId>org.jboss.narayana.jts</groupId>
                                            <artifactId>${java.corba.patch.name}</artifactId>
                                            <version>${project.version}</version>
                                            <type>${project.packaging}</type>
                                        </artifactItem>
                                        <artifactItem>
                                            <groupId>org.jboss.narayana.jta</groupId>
                                            <artifactId>narayana-jta-j9-module</artifactId>
                                            <version>${project.version}</version>
                                            <type>jar</type>
                                            <outputDirectory>${project.build.directory}/upgrademodulepath</outputDirectory>
                                        </artifactItem>
                                    </artifactItems>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <source>1.9</source>
                            <target>1.9</target>
                            <compilerArgs>
                                <arg>--patch-module</arg>
                                <arg>java.corba=${java.corba.patch.jar}</arg>
                                <arg>--add-modules</arg>
                                <arg>java.corba</arg>
                                <arg>--upgrade-module-path</arg>
                                <arg>${project.build.directory}/upgrademodulepath</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
            <properties>
                <jvm.args.jdk9>--add-modules java.corba --patch-module java.corba=${java.corba.patch.jar} --upgrade-module-path ${project.build.directory}/upgrademodulepath</jvm.args.jdk9>
            </properties>
        </profile>
        <profile>
            <id>jts-jacorb</id>
            <activation>
                <property>
                    <name>!jacorb-disabled</name>
                </property>
            </activation>
            <dependencies>
               <dependency>
                    <groupId>org.jboss.narayana.jts</groupId>
                    <artifactId>narayana-jts-jacorb</artifactId>
                    <scope>provided</scope>
                </dependency>
                <dependency>
                  <groupId>jacorb</groupId>
                  <artifactId>jacorb</artifactId>
                  <scope>provided</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
</project>
